// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnifiedFundMetrics - Snapshot Testing > should match snapshot for complete metrics structure 1`] = `
{
  "_cache": {
    "hit": false,
    "key": "fund:1:unified-metrics:v1",
  },
  "_status": {
    "computeTimeMs": 125,
    "engines": {
      "actual": "success",
      "projected": "success",
      "target": "success",
      "variance": "success",
    },
    "quality": "complete",
  },
  "actual": {
    "activeCompanies": 10,
    "asOfDate": "2025-01-01T00:00:00.000Z",
    "averageCheckSize": 3461538,
    "currentNAV": 60000000,
    "deploymentRate": 45,
    "dpi": 0.2,
    "exitedCompanies": 2,
    "fundAgeMonths": 24,
    "irr": 0.25,
    "rvpi": 1.2,
    "totalCalled": 50000000,
    "totalCommitted": 100000000,
    "totalCompanies": 13,
    "totalDeployed": 45000000,
    "totalDistributions": 10000000,
    "totalUncalled": 50000000,
    "totalValue": 70000000,
    "tvpi": 1.4,
    "writtenOffCompanies": 1,
  },
  "fundId": 1,
  "fundName": "Test Fund I",
  "lastUpdated": "2025-01-01T00:00:00.000Z",
  "projected": {
    "allocatedReserves": 15000000,
    "asOfDate": "2025-01-01T00:00:00.000Z",
    "deploymentPace": "on-track",
    "expectedDPI": 1.5,
    "expectedIRR": 0.3,
    "expectedTVPI": 2.5,
    "projectedDeployment": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "projectedDistributions": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "projectedNAV": [
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
    ],
    "projectionDate": "2025-01-01T00:00:00.000Z",
    "quartersRemaining": 8,
    "recommendedQuarterlyDeployment": 5000000,
    "reserveAllocationRate": 75,
    "totalReserveNeeds": 20000000,
    "unallocatedReserves": 5000000,
  },
  "target": {
    "targetAverageCheckSize": 5000000,
    "targetCompanyCount": 20,
    "targetDeploymentYears": 3,
    "targetFundSize": 100000000,
    "targetIRR": 0.25,
    "targetTVPI": 2.5,
  },
  "variance": {
    "deploymentVariance": {
      "actual": 45000000,
      "percentDeviation": -10,
      "status": "behind",
      "target": 50000000,
      "variance": -5000000,
    },
    "paceVariance": {
      "capitalDeployedPercent": 45,
      "monthsDeviation": 0,
      "periodElapsedPercent": 50,
      "status": "on-track",
    },
    "performanceVariance": {
      "actualIRR": 0.25,
      "status": "on-track",
      "targetIRR": 0.25,
      "variance": 0,
    },
    "portfolioVariance": {
      "actualCompanies": 13,
      "onTrack": true,
      "targetCompanies": 20,
      "variance": -7,
    },
    "tvpiVariance": {
      "actual": 1.4,
      "projected": 2.5,
      "target": 2.5,
      "varianceVsProjected": -1.1,
      "varianceVsTarget": -1.1,
    },
  },
}
`;

exports[`UnifiedFundMetrics - Snapshot Testing > should match snapshot for metrics with all optional scenario fields 1`] = `
{
  "actual": {
    "activeCompanies": 10,
    "asOfDate": "2025-01-01T00:00:00.000Z",
    "averageCheckSize": 3461538,
    "currentNAV": 60000000,
    "deploymentRate": 45,
    "dpi": 0.2,
    "exitedCompanies": 2,
    "fundAgeMonths": 24,
    "irr": 0.25,
    "rvpi": 1.2,
    "totalCalled": 50000000,
    "totalCommitted": 100000000,
    "totalCompanies": 13,
    "totalDeployed": 45000000,
    "totalDistributions": 10000000,
    "totalUncalled": 50000000,
    "totalValue": 70000000,
    "tvpi": 1.4,
    "writtenOffCompanies": 1,
  },
  "fundId": 1,
  "fundName": "Test Fund I",
  "lastUpdated": "2025-01-01T00:00:00.000Z",
  "projected": {
    "allocatedReserves": 15000000,
    "asOfDate": "2025-01-01T00:00:00.000Z",
    "deploymentPace": "on-track",
    "deploymentProbability": 0.85,
    "expectedDPI": 1.5,
    "expectedIRR": 0.3,
    "expectedTVPI": 2.5,
    "irrRange": [
      0.15,
      0.45,
    ],
    "optimisticTVPI": 3.5,
    "pessimisticTVPI": 1.5,
    "projectedDeployment": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "projectedDistributions": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "projectedNAV": [
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
    ],
    "projectionDate": "2025-01-01T00:00:00.000Z",
    "quartersRemaining": 8,
    "recommendedQuarterlyDeployment": 5000000,
    "reserveAllocationRate": 75,
    "totalReserveNeeds": 20000000,
    "unallocatedReserves": 5000000,
  },
  "target": {
    "targetAverageCheckSize": 5000000,
    "targetCompanyCount": 20,
    "targetDeploymentYears": 3,
    "targetFundSize": 100000000,
    "targetIRR": 0.25,
    "targetTVPI": 2.5,
  },
  "variance": {
    "deploymentVariance": {
      "actual": 45000000,
      "percentDeviation": -10,
      "status": "behind",
      "target": 50000000,
      "variance": -5000000,
    },
    "paceVariance": {
      "capitalDeployedPercent": 45,
      "monthsDeviation": 0,
      "periodElapsedPercent": 50,
      "status": "on-track",
    },
    "performanceVariance": {
      "actualIRR": 0.25,
      "status": "on-track",
      "targetIRR": 0.25,
      "variance": 0,
    },
    "portfolioVariance": {
      "actualCompanies": 13,
      "onTrack": true,
      "targetCompanies": 20,
      "variance": -7,
    },
    "tvpiVariance": {
      "actual": 1.4,
      "projected": 2.5,
      "target": 2.5,
      "varianceVsProjected": -1.1,
      "varianceVsTarget": -1.1,
    },
  },
}
`;

exports[`UnifiedFundMetrics - Snapshot Testing > should match snapshot for minimal metrics (no optional fields) 1`] = `
{
  "actual": {
    "activeCompanies": 10,
    "asOfDate": "2025-01-01T00:00:00.000Z",
    "averageCheckSize": 3461538,
    "currentNAV": 60000000,
    "deploymentRate": 45,
    "dpi": 0.2,
    "exitedCompanies": 2,
    "irr": 0.25,
    "rvpi": 1.2,
    "totalCalled": 50000000,
    "totalCommitted": 100000000,
    "totalCompanies": 13,
    "totalDeployed": 45000000,
    "totalDistributions": 10000000,
    "totalUncalled": 50000000,
    "totalValue": 70000000,
    "tvpi": 1.4,
    "writtenOffCompanies": 1,
  },
  "fundId": 1,
  "fundName": "Test Fund I",
  "lastUpdated": "2025-01-01T00:00:00.000Z",
  "projected": {
    "allocatedReserves": 15000000,
    "asOfDate": "2025-01-01T00:00:00.000Z",
    "deploymentPace": "on-track",
    "expectedDPI": 1.5,
    "expectedIRR": 0.3,
    "expectedTVPI": 2.5,
    "projectedDeployment": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "projectedDistributions": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "projectedNAV": [
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
      60000000,
    ],
    "projectionDate": "2025-01-01T00:00:00.000Z",
    "quartersRemaining": 8,
    "recommendedQuarterlyDeployment": 5000000,
    "reserveAllocationRate": 75,
    "totalReserveNeeds": 20000000,
    "unallocatedReserves": 5000000,
  },
  "target": {
    "targetAverageCheckSize": 5000000,
    "targetCompanyCount": 20,
    "targetDeploymentYears": 3,
    "targetFundSize": 100000000,
    "targetIRR": 0.25,
    "targetTVPI": 2.5,
  },
  "variance": {
    "deploymentVariance": {
      "actual": 45000000,
      "percentDeviation": -10,
      "status": "behind",
      "target": 50000000,
      "variance": -5000000,
    },
    "paceVariance": {
      "capitalDeployedPercent": 45,
      "monthsDeviation": 0,
      "periodElapsedPercent": 50,
      "status": "on-track",
    },
    "performanceVariance": {
      "actualIRR": 0.25,
      "status": "on-track",
      "targetIRR": 0.25,
      "variance": 0,
    },
    "portfolioVariance": {
      "actualCompanies": 13,
      "onTrack": true,
      "targetCompanies": 20,
      "variance": -7,
    },
    "tvpiVariance": {
      "actual": 1.4,
      "projected": 2.5,
      "target": 2.5,
      "varianceVsProjected": -1.1,
      "varianceVsTarget": -1.1,
    },
  },
}
`;
